kmpを修正した